Working in refactoring method getNumberOfVariables()