@@ -5,6 +5,7 @@ import org.uma.jmetal.solution.binarysolution.BinarySolution;
 import org.uma.jmetal.solution.binarysolution.impl.DefaultBinarySolution;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 
@@ -19,7 +20,7 @@ public class DefaultBinarySolutionTest {
   @Test public void shouldGetNumberOfBitsBeEqualToTheNumberOfOfBitsPerVariable() {
     DefaultBinarySolution solution = new DefaultBinarySolution(Arrays.asList(2, 2, 2), 3);
 
-    for (int i = 0; i < solution.getNumberOfVariables(); i++) {
+    for (int i = 0; i < solution.variables().size(); i++) {
       assertEquals(solution.getNumberOfBits(i), solution.getNumberOfBits(i));
     }
   }
@@ -32,20 +33,20 @@ public class DefaultBinarySolutionTest {
   }
 
   @Test public void shouldTheHashCodeOfTwoIdenticalSolutionsBeTheSame() {
-    BinarySolution solutionA = new DefaultBinarySolution(Arrays.asList(5), 2);
-    BinarySolution solutionB = new DefaultBinarySolution(Arrays.asList(5),2);
+    BinarySolution solutionA = new DefaultBinarySolution(List.of(5), 2);
+    BinarySolution solutionB = new DefaultBinarySolution(List.of(5),2);
 
-    solutionA.getVariable(0).set(0) ;
-    solutionA.getVariable(0).clear(1) ;
-    solutionA.getVariable(0).set(2) ;
-    solutionA.getVariable(0).clear(3) ;
-    solutionA.getVariable(0).set(4) ;
+    solutionA.variables().get(0).set(0) ;
+    solutionA.variables().get(0).clear(1) ;
+    solutionA.variables().get(0).set(2) ;
+    solutionA.variables().get(0).clear(3) ;
+    solutionA.variables().get(0).set(4) ;
 
-    solutionB.getVariable(0).set(0) ;
-    solutionB.getVariable(0).clear(1) ;
-    solutionB.getVariable(0).set(2) ;
-    solutionB.getVariable(0).clear(3) ;
-    solutionB.getVariable(0).set(4) ;
+    solutionB.variables().get(0).set(0) ;
+    solutionB.variables().get(0).clear(1) ;
+    solutionB.variables().get(0).set(2) ;
+    solutionB.variables().get(0).clear(3) ;
+    solutionB.variables().get(0).set(4) ;
 
     assertEquals(solutionA.hashCode(), solutionB.hashCode());
   }
@@ -53,11 +54,11 @@ public class DefaultBinarySolutionTest {
 
   @Test public void shouldGetVariableValueStringReturnARightStringRepresentation() {
     BinarySolution solution = new DefaultBinarySolution(Arrays.asList(5), 2);
-    solution.getVariable(0).set(0, 5) ;
+    solution.variables().get(0).set(0, 5) ;
 
-    assertEquals("11111", solution.getVariable(0).toString()) ;
+    assertEquals("11111", solution.variables().get(0).toString()) ;
 
-    solution.getVariable(0).clear(2) ;
-    assertEquals("11011", solution.getVariable(0).toString()) ;
+    solution.variables().get(0).clear(2) ;
+    assertEquals("11011", solution.variables().get(0).toString()) ;
   }
 }
